--- a/main.css
+++ b/main.css
@@ -9,12 +9,14 @@ ul  {
 }
 
 li {
-  display: inline-block;
-  width: 33.3333%;
-  float: left;
-  overflow: hidden;
-  opacity: 1;
-  transition: 0.25s opacity ease-out;
+    display: inline-block;
+    width: calc(33.3333% - 42px);
+    float: left;
+    overflow: hidden;
+    opacity: 1;
+    transition: 0.25s opacity ease-out;
+    border: 3px solid black;
+    margin: 10px;
 }
 
 select {
@@ -24,15 +26,15 @@ select {
 }
 
 li:nth-of-type(3n) {
-  background-color: lightblue;
+  box-shadow: 0px 4px 0px 0px lightblue;
 }
 
 li:nth-of-type(3n + 1) {
-  background-color: blue;
+box-shadow: 0px 4px 0px 0px orangered;
 }
 
 li:nth-of-type(3n + 2) {
-  background-color: red;
+  box-shadow: 0px 4px 0px 0px magenta;
 }
 
 .hide {
