--- a/main.css
+++ b/main.css
@@ -8,10 +8,10 @@ ul  {
   padding: 20px;
 }
 
-li {
+.filter-list-item {
     display: inline-block;
     width: calc(33.3333% - 42px);
-    float: left;
+    // float: left;
     overflow: hidden;
     opacity: 1;
     transition: 0.25s opacity ease-out;
@@ -19,21 +19,21 @@ li {
     margin: 10px;
 }
 
-select {
+.select-option {
   -webkit-appearance: select;
       -moz-appearance: select;
       appearance: select;
 }
 
-li:nth-of-type(3n) {
+.filter-list-item:nth-of-type(3n) {
   box-shadow: 0px 4px 0px 0px lightblue;
 }
 
-li:nth-of-type(3n + 1) {
+.filter-list-item:nth-of-type(3n + 1) {
 box-shadow: 0px 4px 0px 0px orangered;
 }
 
-li:nth-of-type(3n + 2) {
+.filter-list-item:nth-of-type(3n + 2) {
   box-shadow: 0px 4px 0px 0px magenta;
 }
 
